# sshllm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: chat.rs  config.rs  llm.rs  logger.rs  main.rs  server.rs
