[package]
name = "sshllm"
version = "0.1.2"
edition = "2024"

[dependencies]
# SSH server
russh = "0.57"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for LLM API
reqwest = { version = "0.13", features = ["json"] }

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time handling
chrono = "0.4"

# Error handling
anyhow = "1"

# Tracing for logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }

# CLI arguments
clap = { version = "4", features = ["derive", "env"] }

# Hashing for key fingerprints
sha2 = "0.10"
hex = "0.4"
